[package]
name = "roma"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
description = "roma is a fast routes map/path router"
repository = "https://github.com/kardeiz/roma"
readme = "README.md"
keywords = ["radix", "tree", "path", "router"]
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
